# FAST-NUCES

./: README.md
Freshman-1/ICT/: Project - Clicker.html
Freshman-1/ICT/Project - Get Set Fast/: Presentation.docx
Freshman-1/PF/Assignment 2/: A2-Q1-23k0686.c  A2-Q2-23k0686.C  A2-Q3-23k0686.c  A2-Q4-23k0686.c  A2-Q5-23k0686.c  A2-Q6-23k0686.c  A2-Q7-23k0686.c  TraceTable.xlsx
Freshman-1/PF/Project - Chamber Of Secrets/: CMakeLists.txt  main.c
